--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt">
   <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, target-densitydpi=medium-dpi, user-scalable=0" />
+	<meta charset="UTF-8">
     <title>Allrea</title>
     <link rel="stylesheet" href="css/style.css"
   </head>
